# Energy

./: .gitignore  ENERGY_ANALYSIS_GUIDE_v2.md  EVAL_QUICK_REFERENCE.md  LAUNCH_GUIDE.md  README.md  aggregate_benchmark_scores.py  convert_stage_to_experiment.py  final_infer_metrics.ipynb  final_infer_metrics.py  fix_temp2_logits.py  interpret_dataframe.ipynb  interpret_dataframe.py.py  interpret_results.ipynb  interpret_results.py  interpret_results_interface_v2.py  notex.txt  power_log_to_experiment_summary.py  prerun_validation.md  pyproject.toml  reconstruct_snapshot.py  requirements.txt  run_eval.sh  run_experiment.py  run_kd.sh  run_kd_32b_to_13b.sh  run_kd_32b_to_1b.sh  run_kd_32b_to_7b.sh  run_pipeline.sh  run_sft_32b_to_13b.sh  run_sft_32b_to_1b.sh  run_sft_32b_to_1b_true.sh  run_sft_32b_to_7b.sh  run_with_validation.py  stage_metrics.csv  test_prerun.py
configs/: README.md  base.yaml
configs/experiments/: dpo_32b_to_1b.yaml  dpo_32b_to_7b.yaml  dpo_7b_to_1b.yaml  kd_32b_to_13b.yaml  kd_32b_to_1b.yaml  kd_32b_to_7b.yaml  kd_7b_to_1b.yaml  sft_32b_to_13b.yaml  sft_32b_to_1b.yaml  sft_32b_to_7b.yaml  sft_7b_to_1b.yaml
distill_bench/core/: checkpoint.py  config_loader.py  dpo_trainer.py  energy_logger.py  environment.py  interpret_results.py  prerun.py  synthetic_dataset.py  trainer.py  utils.py
distill_bench/data/: alpaca_eval_adapter.py  codeforces_preprocess_dataset.py  eval_bench.py  infinity_preprocess_dataset.py  lm_eval_adapter.py  logit_caching.py  (+10 more)
logs/: experiment_summary.json
src/: main.py  trainer.py
trillium-logs/: experiment_summary.json
(+534 files in other folders)
