[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distillation-energy-benchmark"
version = "0.0.0"
description = "Distillation and evaluation harness with energy tracking"
requires-python = ">=3.10"
dependencies = [
  "torch==2.6.0",
  "transformers==4.51.3",
  "datasets>=2.14.0",
  "trl==0.17.0",
  "numpy>=1.24.0,<2.0",
  "scipy>=1.10.0",
  "pandas<2.0",
  "accelerate>=0.25.0",
  "huggingface-hub>=0.16.0",
  "safetensors>=0.4.0",
  "codecarbon",
  "nvidia-ml-py",
  "psutil",
  "PyYAML>=6.0",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "triton==3.2.0",
  "typing-inspection==0.4.0",
  "typing_extensions==4.13.2",
  "tzdata==2025.2",
  "urllib3==2.4.0",
  "wcwidth==0.2.13",
  "xxhash==3.5.0",
  "yarl==1.20.0",
  "wandb",
]

[project.optional-dependencies]
eval = [
  "lm-eval==0.4.2",
  "alpaca_eval==0.4.7",
  "jsonlines>=4.0.0",
  "mt-bench-101 @ git+https://github.com/mtbench101/mt-bench-101.git",
]

[tool.black]
line-length = 130

[tool.ruff]
line-length = 130
